--- a/spring_mvc/pom.xml
+++ b/spring_mvc/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.javamentor</groupId>
     <artifactId>spring-mvc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <packaging>war</packaging>
 
@@ -70,8 +70,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>14.0.1</source>
-                    <target>14.0.1</target>
+                    <source>13</source>
+                    <target>13</target>
                 </configuration>
             </plugin>
             <plugin>
