--- a/SpringMvcExtended/pom.xml
+++ b/SpringMvcExtended/pom.xml
@@ -9,34 +9,9 @@
     <version>1.0</version>
 
     <properties>
-        <spring.version>5.1.8.RELEASE</spring.version>
+        <spring.version>5.2.0.RELEASE</spring.version>
         <hibernate.version>5.4.14.Final</hibernate.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <warSourceDirectory>src/webapp</warSourceDirectory>
-                    <warName>SpringWebExample</warName>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <packaging>war</packaging>
 
     <dependencies>
 
@@ -49,7 +24,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
+            <version>5.1.8.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -69,6 +44,8 @@
             <artifactId>spring-aop</artifactId>
             <version>5.1.8.RELEASE</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -120,6 +97,24 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>com.zaxxer</groupId>-->
 <!--            <artifactId>HikariCP</artifactId>-->
@@ -139,4 +134,30 @@
 <!--        </dependency>-->
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <warSourceDirectory>src/webapp</warSourceDirectory>
+                    <warName>SpringWebExample</warName>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <packaging>war</packaging>
+
 </project>
