added a non-working 3.1.2

--- a/JM Spring Boot/src/main/resources/application.properties
+++ b/JM Spring Boot/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=Kwerty007
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.exclude= META-INF/static/**,META-INF/templates/**
