--- a/JM Spring Boot/pom.xml
+++ b/JM Spring Boot/pom.xml
@@ -83,6 +83,12 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
